Database Added with Scaffold view and controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SchoolManagementDbConnection":"Server=localhost, 1400;Database=SchoolManagementDb;user id=SA;password=StrongPassword!;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
