Added Auth0 Authntication

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0":{
+    "Domain":"dev-5yrefcb12sox8xf5.us.auth0.com",
+    "ClientId":"uOBuvhmoUzz7cPxKQbBRY0NwgC3EAn9Q"
+  }
 }
